Closed Bug 487712 Opened 15 years ago Closed 15 years ago

Pick up NSS_HEAD_20090409 to fix WINCE

Categories

(Core :: Security: PSM, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

(Keywords: mobile)

The recent landing of NSS 3.12.3 broke Windows CE tinderbox.

We offer snapshot NSS_HEAD_20090409 which should have the necessary Windows CE fixes.

This snapshot is OK for use by mozilla-central trunk development, but should not be used for any releases.
I have r+ from Nelson Bolyard and Bob Relyea from today's NSS conference, who have agreed to this approach.
pushed to mozilla-central
http://hg.mozilla.org/mozilla-central/rev/c88e42c82970
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
I should have used bug 487673 for landing this tag...
Blocks: 487673
Are the relevant changes in NSS_HEAD_20090409 going to be landing on the mozilla-1.9.1 before the release (as part of NSS 3.12.4, maybe)? The current plans are for Fennec to ship from something 1.9.1 based, I think.
tracking-fennec: --- → ?
Keywords: mobile
tracking-fennec: ? → ---
You need to log in before you can comment on or make changes to this bug.