Bug 487712, Pick up NSS_HEAD_20090409 to fix WINCE Got r=nelson and r=rrelyea in today's NSS conference call. CLOSED TREE