security/nss/lib/ckfw/capi/staticobj.c
@@ -37,7 +37,7 @@
  * ***** END LICENSE BLOCK ***** */
 
 #ifdef DEBUG
-static const char CVS_ID[] = "@(#) $RCSfile: staticobj.c,v $ $Revision: 1.2 $ $Date: 2008/10/05 20:59:19 $""; @(#) $RCSfile: staticobj.c,v $ $Revision: 1.2 $ $Date: 2008/10/05 20:59:19 $";
+static const char CVS_ID[] = "@(#) $RCSfile: staticobj.c,v $ $Revision: 1.3 $ $Date: 2009/04/09 02:28:50 $""; @(#) $RCSfile: staticobj.c,v $ $Revision: 1.3 $ $Date: 2009/04/09 02:28:50 $";
 #endif /* DEBUG */
 
 #ifndef CKCAPI_H
@@ -68,7 +68,10 @@ static const NSSItem nss_ckcapi_items_1 [] = {
 };
 
 ckcapiInternalObject nss_ckcapi_data[] = {
-  { ckcapiRaw, { 5, nss_ckcapi_types_1, nss_ckcapi_items_1} , {NULL} },
+  { ckcapiRaw,
+    { 5, nss_ckcapi_types_1, nss_ckcapi_items_1} ,
+  },
+
 };
 
 const PRUint32 nss_ckcapi_nObjects = 1;
